# conda_bazel_build

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  conda_repo.BUILD  conda_repo.bzl  main.c  main.mojo  pixi.BUILD  pixi.toml
c_lib/: BUILD.bazel
