bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "rules_mojo")
archive_override(
    module_name = "rules_mojo",
    integrity = "sha256-U1nZFqGyqmfDV7ifCB79d1ctwQ6lRY35ecckbpUX/Fc=",
    strip_prefix = "rules_mojo-be8b3078e2a4fb36356bc2c29e906b0ca253c0f8",
    urls = [
        "https://github.com/modular/rules_mojo/archive/be8b3078e2a4fb36356bc2c29e906b0ca253c0f8.tar.gz",
    ],
)

bazel_dep(name = "gazelle_cc", version = "0.5.0")

conda_repo = use_repo_rule("//:conda_repo.bzl", "conda_repo")

conda_repo(
    name = "conda_repo",
    cc_resource_dir = "lib/gcc/x86_64-conda-linux-gnu/15.2.0",
    cc_sysroot = "x86_64-conda-linux-gnu/sysroot",
    path = ".pixi/envs/default",
)

register_toolchains(
    "@conda_repo//:linux_x86_64_toolchain",
    "@conda_repo//:mojo_toolchain",
)
